--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -17,98 +17,90 @@
       {invalid-objects}
     </message-text>
     <message-text xml:lang="nl">
-      Ongeldige statusen voor tekening type {tekening-type}, deze moet een van {allowed-statuses} zijn
+      Ongeldige statusen voor tekening type {1}, deze moet een van {2} zijn
       
       Invalide objecten: 
-      {invalid-objects}
+      {3}
     </message-text>
   </message>
   <message id="point-outside-of-project-area">
     <message-text xml:lang="en">
-     Point of handle {handle} is outside of project area.
+     Point of handle {1} is outside of project area.
     </message-text>
     <message-text xml:lang="nl">
-      Punt met handle {handle} is buiten het project gebiefd
+      Punt met handle {1} is buiten het project gebiefd
     </message-text>
   </message>
   <message id="line-outside-of-project-area">
     <message-text xml:lang="en">
-      Line with handle {handle} is outside the project area.
+      Line with handle {1} is outside the project area.
     </message-text>
     <message-text xml:lang="nl">
-      Lijn met handle {handle} valt buiten het project gebied.
+      Lijn met handle {1} valt buiten het project gebied.
     </message-text>
   </message>
   <message id="area-outside-of-project-area">
     <message-text xml:lang="en">
-      Area with handle {handle} is outside the project area.
+      Area with handle {1} is outside the project area.
     </message-text>
     <message-text xml:lang="nl">
-      Gebied met handle {handle} valt buiten het project gebied.
+      Gebied met handle {1} valt buiten het project gebied.
     </message-text>
   </message>
   <message id="line-segment-measurement-incorrect">
     <message-text xml:lang="en">
-      A line segment on object {handle} is shroter than 10cm or longer than 50cm
+      A line segment on object {1} is shroter than 10cm or longer than 50cm
     </message-text>
     <message-text xml:lang="nl">
-      Een lijnsegment bij object {handle} is korter dan 10 cm of langer dan 50 cm!
+      Een lijnsegment bij object {1} is korter dan 10 cm of langer dan 50 cm!
     </message-text>
   </message>
   <message id="line-angle-larger-than-45">
     <message-text xml:lang="en">
-      A linesegment in object {handle} contains a kink! Angles of linesegments cannot exceed 45 degrees
+      A linesegment in object {1} contains a kink! Angles of linesegments cannot exceed 45 degrees
     </message-text>
     <message-text xml:lang="nl">
-      Een lijnsegment binnen object {handle} bevat een knik! Hoeken van lijnsegmenten mogen niet groter dan 45 graden zijn
+      Een lijnsegment binnen object {1} bevat een knik! Hoeken van lijnsegmenten mogen niet groter dan 45 graden zijn
     </message-text>
   </message>
   <message id="cable-has-no-subtype">
     <message-text xml:lang="en">
-      The object {handle} does not have a subtype!
+      The object {1} does not have a subtype!
     </message-text>
     <message-text xml:lang="nl">
-      Het object {handle} heeft geen subtype!
+      Het object {1} heeft geen subtype!
     </message-text>
   </message>
   <message id="elec-objects-does-not-have-inmeetwijze-or-nauwkeurigheid">
     <message-text xml:lang="nl">
-      Object {handle} moet een inmeetwijze en nauwkeurigheid hebben.
+      Object {1} moet een inmeetwijze en nauwkeurigheid hebben.
     </message-text>
     <message-text xml:lang="en">
-      Object {handle} need an inmeetwijze en nauwkeurigheid
+      Object {1} need an inmeetwijze en nauwkeurigheid
     </message-text>
   </message>
   <message id="gisId-assetId-not-unset-if-new-revision-existing">
     <message-text xml:lang="nl">
-      Het gis id en assset id van object {handle} mogen niet leeg zijn als de status {statuses} is
+      Het gis id en assset id van object {1} mogen niet leeg zijn als de status {2} is
     </message-text>
     <message-text xml:lang="en">
-      The gis id and asset id of object {handle} cannot be empty if the status is of {statuses}
+      The gis id and asset id of object {1} cannot be empty if the status is of {2}
     </message-text>
   </message>
   <message id="gisId-assetId-are-unset-if-new">
     <message-text xml:lang="nl">
-      Het gis id en assset id van object {handle} MOETEN leeg zijn als de status NIET {statuses} is!
+      Het gis id en assset id van object {1} MOETEN leeg zijn als de status NIET {2} is!
     </message-text>
     <message-text xml:lang="en">
-      The gis id and asset id of object {handle} HAVE TO be empty if the status IS NOT of type {statuses}
+      The gis id and asset id of object {1} HAVE TO be empty if the status IS NOT of type {2}
     </message-text>
   </message>
-  <message id="functie-not-present">
+  <message id="attribute-not-present">
     <message-text xml:lang="nl">
-      De functie op object {handle} is niet aanwezig!
+      Het attribuut {1} op object {2} is niet aanwezig!
     </message-text>
     <message-text xml:lang="en">
-      The attribute of Functie on object {handle} is not present!
-    </message-text>
-  </message>
-  <message id="eigen-richting-not-present">
-    <message-text xml:lang="nl">
-      Het attribuut {attribute} op object {handle} is niet aanwezig!
-    </message-text>
-    <message-text xml:lang="en">
-      The attribute {attribute} on object {handle} is not present!
+      The attribute {1} on object {2} is not present!
     </message-text>
   </message>
 </messages>
