--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -1,34 +1,30 @@
 <messages xmlns:xml="http://www.w3.org/XML/1998/namespace">
   <message id="aprojectreferentie-not-present-or-only-object">
     <message-text xml:lang="en">
-      The NLCS++ file needs to contain an Aprojectreferentie and at least 1 other NLCS++ object. Current amount of objects:
-      {1}
+      The NLCS++ file needs to contain an Aprojectreferentie and at least 1 other NLCS++ object. Current amount of objects: {1}
     </message-text>
     <message-text xml:lang="nl">
-      Het NLCS++ bestand moet een Aprojectreferentie en minstens 1 ander NLCS object bevatten. Huidig aantal objecten:
-      {1}
+      Het NLCS++ bestand moet een Aprojectreferentie en minstens 1 ander NLCS object bevatten. Huidig aantal objecten: {1}
     </message-text>
   </message>
   <message id="invalid-status-for-tekening-type">
     <message-text xml:lang="en">
       Invalid statuses for tekening type {1}, must be one of: {2}
       
-      Invalid objects: 
-      {3}
+      Invalid objects: {3}
     </message-text>
     <message-text xml:lang="nl">
-      Ongeldige statusen voor tekening type {1}, deze moet een van {2} zijn
+      Ongeldige statussen voor tekening type {1}, moet een van de volgende zijn: {2} 
       
-      Invalide objecten: 
-      {3}
+      Ongeldige objecten: {3}
     </message-text>
   </message>
   <message id="point-outside-of-project-area">
     <message-text xml:lang="en">
-     Point of handle {1} is outside of project area.
+      Point with handle {1} is outside of project area.
     </message-text>
     <message-text xml:lang="nl">
-      Punt met handle {1} is buiten het project gebiefd
+      Punt met handle {1} ligt buiten het projectgebied.
     </message-text>
   </message>
   <message id="line-outside-of-project-area">
@@ -36,7 +32,7 @@
       Line with handle {1} is outside the project area.
     </message-text>
     <message-text xml:lang="nl">
-      Lijn met handle {1} valt buiten het project gebied.
+      Lijn met handle {1} valt buiten het projectgebied.
     </message-text>
   </message>
   <message id="area-outside-of-project-area">
@@ -44,63 +40,47 @@
       Area with handle {1} is outside the project area.
     </message-text>
     <message-text xml:lang="nl">
-      Gebied met handle {1} valt buiten het project gebied.
+      Vlak met handle {1} valt buiten het projectgebied.
     </message-text>
   </message>
   <message id="line-segment-measurement-incorrect">
     <message-text xml:lang="en">
-      A line segment on object {1} is shroter than 10cm or longer than 50cm
+      A line segment on object {1} is shorter than 10cm or longer than 50cm.
     </message-text>
     <message-text xml:lang="nl">
-      Een lijnsegment bij object {1} is korter dan 10 cm of langer dan 50 cm!
+      Een lijnsegment bij object {1} is korter dan 10cm of langer dan 50 cm.
     </message-text>
   </message>
   <message id="line-angle-larger-than-45">
     <message-text xml:lang="en">
-      A linesegment in object {1} contains a kink! Angles of linesegments cannot exceed 45 degrees
+      A line segment in object {1} contains a kink. Angles between line segments cannot exceed 45 degrees.
     </message-text>
     <message-text xml:lang="nl">
-      Een lijnsegment binnen object {1} bevat een knik! Hoeken van lijnsegmenten mogen niet groter dan 45 graden zijn
+      Een lijnsegment binnen object {1} bevat een knik. Hoeken tussen lijnsegmenten mogen niet groter dan 45 graden zijn.
     </message-text>
   </message>
-  <message id="cable-has-no-subtype">
+  <message id="gisid-assetid-not-unset-if-new-revision-existing">
     <message-text xml:lang="en">
-      The object {1} does not have a subtype!
+      The attributes GisId and AssetId of object {1} cannot be empty if the status is one of: {2}
     </message-text>
     <message-text xml:lang="nl">
-      Het object {1} heeft geen subtype!
+      De attributen GisId en AssetId van object {1} mogen niet leeg zijn indien de status een van de volgende is: {2}
     </message-text>
   </message>
-  <message id="elec-objects-does-not-have-inmeetwijze-or-nauwkeurigheid">
-    <message-text xml:lang="nl">
-      Object {1} moet een inmeetwijze en nauwkeurigheid hebben.
-    </message-text>
+  <message id="gisid-assetid-are-unset-if-new">
     <message-text xml:lang="en">
-      Object {1} need an inmeetwijze en nauwkeurigheid
+      The attributes GisId and AssetId of object {1} must be empty if the status IS NOT one of: {2}
     </message-text>
-  </message>
-  <message id="gisId-assetId-not-unset-if-new-revision-existing">
     <message-text xml:lang="nl">
-      Het gis id en assset id van object {1} mogen niet leeg zijn als de status {2} is
-    </message-text>
-    <message-text xml:lang="en">
-      The gis id and asset id of object {1} cannot be empty if the status is of {2}
-    </message-text>
-  </message>
-  <message id="gisId-assetId-are-unset-if-new">
-    <message-text xml:lang="nl">
-      Het gis id en assset id van object {1} MOETEN leeg zijn als de status NIET {2} is!
-    </message-text>
-    <message-text xml:lang="en">
-      The gis id and asset id of object {1} HAVE TO be empty if the status IS NOT of type {2}
+      De attributen GisId en AssetId van object {1} moeten leeg zijn indien de status een van de volgende is: {2}
     </message-text>
   </message>
   <message id="attribute-not-present">
-    <message-text xml:lang="nl">
-      Het attribuut {1} op object {2} is niet aanwezig!
-    </message-text>
     <message-text xml:lang="en">
-      The attribute {1} on object {2} is not present!
+      The attribute {1} is not present on object {2}.
+    </message-text>
+    <message-text xml:lang="nl">
+      Het attribuut {1} is niet aanwezig op object {2}.
     </message-text>
   </message>
 </messages>
