--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -79,6 +79,14 @@
       Object moet verbonden zijn met een kabel.
     </message-text>
   </message>
+  <message id="date-in-the-future">
+    <message-text xml:lang="en">
+      The DatumAanleg on object is in the future!
+    </message-text>
+    <message-text xml:lang="nl">
+      De DatumAanleg op object is in de toekomst!
+    </message-text>
+  </message>
   <message id="cable-not-connected-to-valid-object">
     <message-text xml:lang="nl">
       De kabel is niet verbonden met een mof, overdrachtspunt of station
