--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -139,6 +139,22 @@
       If the Mantelbuis is IN BEDRIJF an Inhoud is REQUIRED.
     </message-text>
   </message>
+  <message id="connected-fases-do-not-match">
+    <message-text xml:lang="nl">
+      Verbonden kabels moeten dezelfde Fase hebben, maar kwam verschillende waardes tegen: {1} 
+    </message-text>
+    <message-text xml:lang="en">
+      Connected cables should have the same Fase, but found different values: {1} 
+    </message-text>
+  </message>
+  <message id="connected-fases-do-not-split">
+    <message-text xml:lang="nl">
+      Elke verbonden kabel moeten elke één van de unieke Fasen hebben ({1}), maar kwam enkel deze waardes tegen: {2}
+    </message-text>
+    <message-text xml:lang="en">
+      Each connected kabel should each have one of the unique Fase values ({1}), but only found the following: {2}      
+    </message-text>
+  </message>
   <message id="inhoud-found">
     <message-text xml:lang="nl">
       Als de Mantelbuis RESERVE is mag deze geen inhoud hebben.
