--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -131,4 +131,28 @@
       If the Mantelbuis is IN BEDRIJF an Inhoud is REQUIRED.
     </message-text>
   </message>
+  <message id="cable-amount-incorrect">
+    <message-text xml:lang="en">
+      There are not enough cables connected to this mof. {1} are required, but found {2}
+    </message-text>
+    <message-text xml:lang="nl">
+      Er zijn niet genoeg kabels verbonden aan de mof. {1} zijn nodig, maar kon er maar {1} vinden
+    </message-text>
+  </message>
+  <message id="phases-are-incorrect">
+    <message-text xml:lang="en">
+      The expected phases for the connected cables are incorrect. Expected {1} but got {2}
+    </message-text>
+    <message-text xml:lang="nl">
+      De verwachte faseaanduidingen voor de verbonden kabels zijn incorrect. Expected {1} maar kreeg {2}
+    </message-text>
+  </message>
+  <message id="bestaande-cable-not-connected-to-new-cable">
+    <message-text xml:lang="nl">
+      Een aftakmof op een bestaande kabel moet ook verbonden zijn aan een nieuwe kabel
+    </message-text>
+    <message-text xml:lang="en">
+      An aftakmof on an existing cable also needs to be connected to a new cable
+    </message-text>
+  </message>
 </messages>
