--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -95,6 +95,16 @@
       De kabel is niet verbonden met een mof, overdrachtspunt of station.
     </message-text>
   </message>
+  <message id="connected-cable-does-not-match-netvlak">
+    <message-text xml:lang="en">
+      Cables connected to each other though a mof must share the same netvlak.
+      Expected only {1} elements, but found {2} {3} element(s).
+    </message-text>
+    <message-text xml:lang="nl">
+      Kabels die via een mof verbonden zijn met elkaar moeten van hetzelfde netvlak zijn.
+      Verwachtte enkel {1} elementen, maar kwam {2} {3} element(en) tegen.
+    </message-text>
+  </message>
   <message id="connected-cable-does-not-match-property">
     <message-text xml:lang="en">
       One or more connected cable does not shared the same value for attribute {1}.
