--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -49,7 +49,7 @@
   </message>
   <message id="gisid-assetid-not-unset-if-new-revision-existing">
     <message-text xml:lang="en">
-      The attributes GisId and AssetId cannot be empty if the status is one of: {1}.
+      The attributes GisId and AssetId cannot be empty if the Status is one of: {1}.
     </message-text>
     <message-text xml:lang="nl">
       De kenmerken GisId en AssetId mogen niet leeg zijn indien de Status een van de volgende is: {1}.
