--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -200,7 +200,7 @@
       Een aftakmof op een bestaande kabel moet ook verbonden zijn aan een nieuwe kabel.
     </message-text>
     <message-text xml:lang="en">
-      An branch joint on an existing cable also needs to be connected to a new cable
+      An branch joint on an existing cable also needs to be connected to a new cable.
     </message-text>
   </message>
 </messages>
