--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -187,7 +187,7 @@
   </message>
   <message id="phases-are-incorrect">
     <message-text xml:lang="en">
-      The expected phases for the connected cables are incorrect. Expected {1} but got {2}
+      The expected phases for the connected cables are incorrect. Expected {1}, but got {2}.
     </message-text>
     <message-text xml:lang="nl">
       De verwachte faseaanduidingen voor de verbonden kabels zijn incorrect. 
