--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -97,7 +97,7 @@
   </message>
   <message id="connected-cable-does-not-match-netvlak">
     <message-text xml:lang="en">
-      Cables connected to each other though a mof must share the same netvlak.
+      Cables connected to each other though a mof must be of the same discipline.
       Expected only {1} elements, but found {2} {3} element(s).
     </message-text>
     <message-text xml:lang="nl">
