--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -173,16 +173,24 @@
     <message-text xml:lang="nl">
       Als de mantelbuis de bedrijfstoestand IN BEDRIJF heeft, dan moet deze een inhoud hebben.
     </message-text>
-    <message id="inhoud-object-not-found">
-      <message-text xml:lang="nl">
-        Er was geen object gevonden wat bij de AmantelbuisInhoud #1 hoort
-      </message-text>
-      <message-text xml:lang="en">
-        Could not find an object that corresponds to the AmantelbuisInhoud #1
-      </message-text>
-    </message>
     <message-text xml:lang="en">
-      If the protection pipe is IN BEDRIJF contents are required.
+      If the protection pipe is IN BEDRIJF, contents are required.
+    </message-text>
+  </message>
+  <message id="inhoud-object-not-found">
+    <message-text xml:lang="nl">
+      De mantelbuisinhoud met ID {1} refereert naar een object met ID {2}, maar deze bestaat niet.
+    </message-text>
+    <message-text xml:lang="en">
+      The protection pipe content with ID {1} refers to an object with ID {2}, but no such object exists.
+    </message-text>
+  </message>
+  <message id="inhoud-floating">
+    <message-text xml:lang="nl">
+      Een mantelbuisinhoud mag niet zweven; MantelbuisID {1} moet refereren naar een bestaande mantelbuis.
+    </message-text>
+    <message-text xml:lang="en">
+      A protection pipe content may not float; MantelbuisID {1} must refer to an existing protection pipe.
     </message-text>
   </message>
   <message id="cable-amount-incorrect">
