R.26 support for Functie 3FASE 3x1FASE

--- a/localization/messages.xml
+++ b/localization/messages.xml
@@ -211,12 +211,12 @@
       Maar de volgende zijn gevonden: {2}
     </message-text>
   </message>
-  <message id="bestaande-cable-not-connected-to-new-cable">
+  <message id="existing-cable-not-connected-to-new-cable">
     <message-text xml:lang="nl">
-      Een aftakmof op een bestaande kabel moet ook verbonden zijn aan een nieuwe kabel.
+      Een aftakmof op een bestaande kabel moet verbonden zijn aan een nieuwe kabel.
     </message-text>
     <message-text xml:lang="en">
-      An branch joint on an existing cable also needs to be connected to a new cable.
+      A branch joint on an existing cable needs to be connected to a new cable.
     </message-text>
   </message>
 </messages>
